[package]
name = "maligned"
version = "0.2.1"
authors = ["Tyler Hawkes <tyler.hawkes@gmail.com>"]
edition = "2018"
description = "A memory alignment library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tylerhawkes/maligned"
documentation = "https://docs.rs/maligned"
readme = "README.md"
keywords = ["array", "align", "aligned", "alignment"]
categories = ["embedded", "memory-management", "no-std"]

[features]
alloc = []
default = ["alloc"]
align-1k = []
align-2k = ["align-1k"]
align-4k = ["align-2k"]
align-8k = ["align-4k"]
align-16k = ["align-8k"]
align-32k = ["align-16k"]
align-64k = ["align-32k"]
align-128k = ["align-64k"]
clippy = []

[package.metadata.docs.rs]
features = ["align-128k"]
